--- a/app/src/main/res/drawable/background_button_green.xml
+++ b/app/src/main/res/drawable/background_button_green.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/holo_green_light"/>
+    <solid android:color="@color/blue_600"/>
     <stroke android:width="1dp"
         android:color="@color/Grey"/>
     <corners android:radius="5dp"/>
