--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,172 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@android:color/background_light"
-    tools:context=".LoginActivity">
+    android:layout_height="match_parent"
+    android:background="@color/grey_5">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:background="@color/blue_600" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5"/>
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/ic_account"
+            app:tint="@android:color/white" />
 
-
-        <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="0.4"/>-->
-
-
-        <FrameLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp">
+            android:layout_margin="10dp"
+            android:visibility="visible"
+            app:cardCornerRadius="6dp"
+            app:cardElevation="5dp">
 
-            <EditText
-                android:id="@+id/input_username"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_edit_text"
-                android:drawableLeft="@drawable/ic_account"
-                android:drawablePadding="10dp"
-                android:hint="Username"
-                android:text=""
-                android:inputType="textEmailAddress"
-                android:textColor="@color/black"
-                android:padding="10dp" />
+                android:orientation="vertical"
+                android:padding="20dp">
 
-            <FrameLayout
-                android:id="@+id/clearEmailLogin"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|right"
-                android:layout_marginRight="8dp"
-                android:padding="10dp"
-                android:visibility="invisible">
-
-                <ImageButton
-
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:background="@android:color/transparent"
-
-                    android:src="@drawable/close" />
-
-            </FrameLayout>
-        </FrameLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="35dp"
+                    android:layout_marginTop="10dp"
+                    android:text="SIGN IN"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    android:textColor="@color/green_500"
+                    android:textStyle="bold" />
 
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp">
 
-            <EditText
-                android:id="@+id/input_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/background_edit_text"
-                android:drawableLeft="@drawable/key_variant"
-                android:drawablePadding="10dp"
-                android:hint="Password"
-                android:text=""
-                android:inputType="textPassword"
-                android:textColor="@color/black"
-                android:padding="10dp" />
+                    <EditText
+                        android:id="@+id/input_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_edit_text"
+                        android:drawableLeft="@drawable/ic_account"
+                        android:drawablePadding="10dp"
+                        android:hint="Username"
+                        android:text=""
+                        android:inputType="textEmailAddress"
+                        android:textColor="@color/black"
+                        android:padding="10dp" />
 
-            <ImageButton
-                android:id="@+id/show"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_gravity="center_vertical|right"
-                android:layout_marginRight="8dp"
-                android:background="@android:color/transparent"
-                android:padding="4dp"
-                android:src="@drawable/eye_outline"
-                android:visibility="invisible" />
+                    <FrameLayout
+                        android:id="@+id/clearEmailLogin"
 
-            <ImageButton
-                android:id="@+id/hide"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_gravity="center_vertical|right"
-                android:layout_marginRight="8dp"
-                android:background="@android:color/transparent"
-                android:padding="4dp"
-                android:src="@drawable/eye_off_outline"
-                android:visibility="invisible" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|right"
+                        android:layout_marginRight="8dp"
+                        android:padding="10dp"
+                        android:visibility="invisible">
 
-        </FrameLayout>
+                        <ImageButton
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/btnLogin"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginRight="0dp"
-                android:background="@drawable/background_button_green"
-                android:text="LOGIN"
-                android:textColor="@color/white"
-                android:textSize="16sp"/>
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:background="@android:color/transparent"
 
-        </LinearLayout>
+                            android:src="@drawable/close" />
+
+                    </FrameLayout>
+                </FrameLayout>
 
 
-        <RelativeLayout
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp">
 
-            <TextView
-                android:id="@+id/txtResetKataSandi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:padding="8dp"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:text="Reset Password"
-                android:textStyle="bold"
-                android:layout_centerHorizontal="true"
-                />
+                    <EditText
+                        android:id="@+id/input_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_edit_text"
+                        android:drawableLeft="@drawable/key_variant"
+                        android:drawablePadding="10dp"
+                        android:hint="Password"
+                        android:text=""
+                        android:inputType="textPassword"
+                        android:textColor="@color/black"
+                        android:padding="10dp" />
+
+                    <ImageButton
+                        android:id="@+id/show"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:layout_marginRight="8dp"
+                        android:background="@android:color/transparent"
+                        android:padding="4dp"
+                        android:src="@drawable/eye_outline"
+                        android:visibility="invisible" />
+
+                    <ImageButton
+                        android:id="@+id/hide"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:layout_marginRight="8dp"
+                        android:background="@android:color/transparent"
+                        android:padding="4dp"
+                        android:src="@drawable/eye_off_outline"
+                        android:visibility="invisible" />
+
+                </FrameLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnLogin"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="0dp"
+                        android:background="@drawable/background_button_green"
+                        android:text="LOGIN"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"/>
+
+                </LinearLayout>
+
+
+                <RelativeLayout
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/txtResetKataSandi"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="8dp"
+                        android:padding="8dp"
+                        android:text="Reset Password"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
 
 
-        </RelativeLayout>
+                </RelativeLayout>
 
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="New user? "
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
+                        android:textColor="@color/blue_grey_300" />
+
+                    <TextView
+                        android:id="@+id/sign_up"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:text="Sign Up"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
+                        android:textColor="@color/colorPrimaryLight"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5"/>
+            android:layout_width="0dp"
+            android:layout_height="15dp" />
+
     </LinearLayout>
 
 </RelativeLayout>
